k8s/apps/network/debug-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-echo-headers
spec:
  selector:
    app: nginx-echo-headers
  ports:
    - port: 8080
      targetPort: 8080
