k8s/apps/network/debug-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-echo-headers
  labels:
    name: nginx-echo-headers
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-For $http_x_forwarded_for,$realip_remote_addr;
spec:
  rules:
    - host: &host debug.holywoo.cbannister.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-echo-headers
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
